# projet-13

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  asgi.py  build.sh  manage.py  oc-lettings-site.sqlite3  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  settings.py  setup_env.py  wsgi.py
.github/workflows/: django.yml
lettings/: models.py  tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py
lettings/templates/lettings/: index.html  letting.html
oc_lettings_site/: models.py  oc-lettings-site.sqlite3  settings.py  tests.py  urls.py  views.py
oc_lettings_site/templates/oc_lettings_site/: index.html
profiles/: models.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/templates/profiles/: index.html  profile.html
