[tool.poetry]
name = "projet-13"
version = "0.1.0"
description = ""
authors = ["Case Gibson <t.barbato78@gmail.com>"]
readme = "README.md"
packages = [{include = "projet_13"}]

[tool.poetry.dependencies]
python = "^3.7.10"
django = "^3.0.0"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
